fix: scope Unity Catalog Integration to a single upstream catalog, aligning with Iceberg Integration